# sdl-enet-multiplayer-experiment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cpp.hint
Common/: CMakeLists.txt
Common/include/: AppState.h  Camera.h  ECS.h  EventHandler.h  MathFuncs.h  Texture.h  Timer.h  Util.h  Window.h
Common/include/Netcode/: Client.h  NetUtil.h  Packet.h  Server.h
Common/src/: ECS.cpp  EventHandler.cpp  Texture.cpp  Util.cpp  Window.cpp
Common/src/Netcode/: Client.cpp  Packet.cpp  Server.cpp
Core/: CMakeLists.txt
Core/include/: All.h  AppState.h  Components.h  ECS.h  EventHandler.h  MathFuncs.h  Texture.h  Util.h  VectorMath.h  Window.h
Core/src/: EventHandler.cpp  Texture.cpp  Window.cpp
Game/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
Game/Client/: CameraFollowerSystem.cpp  CameraFollowerSystem.h  ClientEventSystem.cpp  ClientEventSystem.h  CreateScenes.h  GambettaSync.js  Game.cpp  Game.h  Main.cpp
Game/Common/: AnimationSystem.cpp  AnimationSystem.h  Components.h  CreateScenes.cpp  CreateScenes.h  GraphicsSystem.cpp  GraphicsSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
Game/Server/: Game.cpp  Game.h  Main.cpp  PhysicsSystem.cpp  PhysicsSystem.h  ServerEventSystem.cpp  ServerEventSystem.h
Game/Systems/: ClientEventSystem.cpp  ClientEventSystem.h  Components.h  GraphicsSystem.cpp  GraphicsSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h
Launcher/: CMakeLists.txt  Launcher.cpp
Staminaze/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  Components.h  Game.cpp  Game.h  GraphicsSystem.cpp  GraphicsSystem.h  Main.cpp
